deployment/kubernetes/base/django-service.yaml
# django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  namespace: default
  labels:
    app: django-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: django-app
